# directoragent

./: .env.example  .gitignore  CLAUDE.md  README.md  protocols.py  pyproject.toml  render.yaml  routing.py  schema.sql  verification.md  vision_providers.py
.github/workflows/: ci.yml
docs/: Build_runbook.md  P12.4_RESUME.md  TECHNICAL_DOCUMENTATION.md  Techno functional overview.md
scripts/: _smoke_store.py
src/directoragent/: cli.py  config.py  pipeline.py  protocols.py  routing.py  schema.py  schema.sql  vision_providers.py  web.py
src/directoragent/clients/: higgsfield.py  higgsfield_mock.py  higgsfield_rest_transport.py
src/directoragent/drift/: clip_scorer.py  mock_scorer.py
src/directoragent/phases/: arcs.py  assembler.py  executor.py  mock_plan_provider.py  model_limits.py  motion.py  planner.py  vision.py
src/directoragent/state/: sqlite_store.py
tests/: foundation_hashes.json  test_clip_scorer.py  test_executor.py  test_invariants.py  test_pipeline_mock.py  test_planner.py  test_reconcile.py  test_rest_transport.py  test_routing.py  test_sweep_fixes.py  test_web.py
