[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "directoragent"
version = "0.1.0"
description = "One photo + scene description -> 6-shot production storyboard via Higgsfield MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pydantic-settings",
    "aiosqlite",
    "httpx",
    "tenacity",
    "typer",
    "anthropic",
    "openai",
    "google-generativeai",
]

[project.optional-dependencies]
clip = ["torch", "open-clip-torch", "av", "pillow"]
web = ["fastapi", "uvicorn[standard]"]
# fastapi repeated here so CI (`pip install -e ".[dev]"`) can run test_web.py;
# TestClient itself rides on httpx, which is a base dependency.
dev = ["pytest", "pytest-asyncio", "ruff", "fastapi"]

[project.scripts]
da = "directoragent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
directoragent = ["*.sql"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint.per-file-ignores]
# vision_providers.py is a frozen foundation file; its SceneModel import is
# kept intentionally and must not be edited, so silence F401 there.
"src/directoragent/vision_providers.py" = ["F401"]
